tests/baselines/reference/jsDocDeclarationEmitDoesNotUseNodeModulesPathWithoutError.errors.txt
index.js(5,14): error TS2742: The inferred type of 'NewAjax' cannot be named without a reference to './node_modules/@lion/ajax/dist-types/types/types.js'. This is likely not portable. A type annotation is necessary.


==== package.json (0 errors) ====
    {
        "name": "typescript-issue",
        "private": true,
        "version": "0.0.0",
        "type": "module"
    }
==== node_modules/@lion/ajax/package.json (0 errors) ====
    {
        "name": "@lion/ajax",
        "version": "2.0.2",
        "type": "module",
        "exports": {
          ".": {
            "types": "./dist-types/src/index.d.ts",
            "default": "./src/index.js"
          },
          "./docs/*": "./docs/*"
        }
    }
==== node_modules/@lion/ajax/dist-types/src/index.d.ts (0 errors) ====
    export type LionRequestInit = import('../types/types.js').LionRequestInit;
==== node_modules/@lion/ajax/dist-types/types/types.d.ts (0 errors) ====
    export interface LionRequestInit {
        body?: null | Object;
    } 
==== index.js (1 errors) ====
    /**
     * @typedef {import('@lion/ajax').LionRequestInit} LionRequestInit
     */
    
    export class NewAjax {
                 ~~~~~~~
!!! error TS2742: The inferred type of 'NewAjax' cannot be named without a reference to './node_modules/@lion/ajax/dist-types/types/types.js'. This is likely not portable. A type annotation is necessary.
        /**
         * @param {LionRequestInit} [init]
         */
        case5_unexpectedlyResolvesPathToNodeModules(init) {}
    }